environments/edademo-dev/apps/app-eda-demo-order-ms/services/eda-demo-order-ms/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: eda-demo-order-ms
    app.kubernetes.io/part-of: app-eda-demo-order-ms
  name: eda-demo-order-ms
  namespace: edademo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: eda-demo-order-ms
      app.kubernetes.io/part-of: app-eda-demo-order-ms
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: eda-demo-order-ms
        app.kubernetes.io/part-of: app-eda-demo-order-ms
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: eda-demo-order-ms
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
