environments/edademo-dev/apps/app-eda-demo-order-ms/services/eda-demo-order-ms/base/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: eda-demo-order-ms
    app.kubernetes.io/name: eda-demo-order-ms
    app.kubernetes.io/version: 1.0.0
  name: eda-demo-order-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: eda-demo-order-ms
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      labels:
        app: eda-demo-order-ms
        app.kubernetes.io/name: eda-demo-order-ms
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - args:
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        - -jar
        - /deployments/quarkus-run.jar
        command:
        - java
        image: quay.io/ibmcase/eda-demo-order-ms
        imagePullPolicy: Always
        # imagePullPolicy: IfNotPresent
        name: eda-demo-order-ms
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /deployments/certs/server
          name: kafka-cert
          readOnly: false
          subPath: ""
      volumes:
      - name: kafka-cert
        secret:
          optional: false
          secretName: dev-cluster-ca-cert
