environments/edademo-dev/apps/app-eda-demo-order-ms/services/eda-demo-order-ms/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: eda-demo-order-ms
    app.kubernetes.io/part-of: app-eda-demo-order-ms
  name: eda-demo-order-ms
  namespace: edademo-dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: eda-demo-order-ms
    app.kubernetes.io/part-of: app-eda-demo-order-ms
status:
  loadBalancer: {}
