environments/edademo-dev/apps/app-eda-demo-order-ms/services/eda-demo-order-ms/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: eda-demo-order-ms
  namespace: edademo-dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: eda-demo-order-ms
    weight: 100
  wildcardPolicy: None
